WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
318951
RTCPeerConnection.getStats should verify that the selector is not used in multiple senders/receivers
https://bugs.webkit.org/show_bug.cgi?id=318951
Summary
RTCPeerConnection.getStats should verify that the selector is not used in mul...
youenn fablet
Reported
2026-07-09 05:16:20 PDT
RTCPeerConnection.getStats should verify that the selector is not used in multiple senders/receivers
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-09 05:16:30 PDT
<
rdar://problem/181802298
>
youenn fablet
Comment 2
2026-07-09 05:19:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/68994
EWS
Comment 3
2026-07-10 00:40:09 PDT
Committed
316872@main
(37c0ab0fdfdf): <
https://commits.webkit.org/316872@main
> Reviewed commits have been landed. Closing PR #68994 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug