RTCPeerConnection.getStats should verify that the selector is not used in multiple senders/receivers rdar://181802298 https://bugs.webkit.org/show_bug.cgi?id=318951

Reviewed by Jean-Yves Avenard.

We align with the webrtc spec and verify whether the selector is used in more than one sender/receiver.
If so, we reject the promise.

* LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-getStats.https_rest-expected.txt:
* Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::getStats):

Canonical link: https://commits.webkit.org/316872@main